# video-audio_converter

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  BUILD.md
docs/design/: FILE_CONTEXT.md  GUI_SYSTEM_DESCRIPTION.md  UX_REDESIGN_BRIEF.md
packaging/: build.py  youtube_converter.spec
packaging/icon/: make_icon.py
src/youtube_converter/: __init__.py  __main__.py  app.py  bootstrap.py
src/youtube_converter/config/: __init__.py  constants.py  paths.py  settings.py  theme.py
src/youtube_converter/core/: __init__.py  backend.py  history.py  queue_manager.py  updater.py
src/youtube_converter/resources/translations/: de.json  en.json  es.json  fr.json
src/youtube_converter/resources/web/: app.js  index.html  style.css
src/youtube_converter/utils/: __init__.py  i18n.py  logger.py
tests/: test_backend.py  test_history.py  test_i18n.py  test_queue.py
