[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-converter"
version = "1.0.0"
description = "Desktop downloader (MP4/MP3) for YouTube and 1000+ sites — Terminal Neon Mauve UI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pywebview>=5.0",
    "yt-dlp>=2024.1.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0.0"]
dev = ["pytest>=8.0"]

# Windowed entry point (no console window on Windows).
[project.gui-scripts]
youtube-converter = "youtube_converter.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
youtube_converter = ["resources/web/*", "resources/translations/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
